# pylibrm_lines

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml
src/pylibrm_lines/: __init__.py  renderer.py  scene_info.py  scene_tree.py
tests/: 001_test.py  base.py  test_tree_from_document.py
