[project]
name = "pylibrm-lines"
version = "0.1.0"
description = ""
authors = [
    {name = "RedTTG",email = "red@redttg.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "rm-lines-sys (>=1.2.0,<2.0.0)",
    "rm-api (>=1.0.3,<2.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "pillow (>=11.2.1,<12.0.0)"
]

[tool.poetry]
packages = [{include = "pylibrm_lines", from = "src"}]


[tool.poetry.group.dev.dependencies]
rm-lines-sys = "^1.2.0"
rm-api = "^1.0.3"
pillow = "^11.2.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
