[project]
name = "pylibrm-lines"
version = "0.0.0+replaced-by-ci"
description = ""
authors = [
    {name = "RedTTG",email = "red@redttg.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rm-lines-sys (==1.3.1)",
    "rm-api (==1.2.5)",
    "pillow (>=12.1.1)"
]

[tool.poetry]
packages = [{include = "pylibrm_lines", from = "src"}]


[tool.poetry.group.dev.dependencies]
rm-lines-sys = "^1.3.1"
rm-api = "^1.2.5"
pillow = "^12.1.1"
pytest = "^8.3.5"
pygameextra = "^2.0.86"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
